--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class=""></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
